# pascha-gui

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  tc-mingw.cmake
app/: CMakeLists.txt  Info.plist  app.cpp  app.h  config_io.cpp  config_io.h  date_format.h  gui_controller.cpp  gui_controller.h  wxGuiView.cpp  wxGuiView.h
include/pascha/: calculation_method_decorator.h  calculation_methods.h  calculation_options.h  calendar_conversion.h  date.h  gui_controller.h  i_calculation_method.h  i_calculator_model.h  i_controller.h  i_observable.h  i_observer.h  i_view.h  output_calendar.h  output_calendars.h  output_date.h  output_option.h  output_options.h  pascha_calculator_model.h  target_date.h  target_dates.h  typedefs.h
src/: .clang-format  CMakeLists.txt  calculation_method_decorator.cpp  calculation_method_decorator.h  calculation_methods.cpp  calculation_methods.h  calculation_options.h  calendar_conversion.cpp  calendar_conversion.h  date.h  gui_controller.cpp  gui_controller.h  i_calculation_method.h  i_controller.h  i_observable.h  i_observer.h  output_calendar.h  output_calendars.cpp  output_calendars.h  output_option.h  output_options.cpp  pascha_calculator_model.cpp  pascha_calculator_model.h  target_date.cpp  target_date.h  typedefs.h
test/: CMakeLists.txt  calculation_methods_test.cpp  calendar_conversion_test.cpp  tests.cpp
